--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- dropdown -->			
 				<div class="dropdown">
 				<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Sort
+					Sort List
 				</button>
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 						<a class="dropdown-item" id="even" href="#">Even</a>
